--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -46,6 +46,30 @@
   <ItemGroup>
     <Compile Include="AbstractClasses\MarioRunningStarSprite.cs" />
     <Compile Include="Animation\CoinCollectedFromBlockAnimation.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionBottom.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionLeft.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionRight.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionTop.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionRight.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionTop.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionRight.cs" />
+    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionTop.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionBottom.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionLeft.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionRight.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionTop.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionRight.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionTop.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionRight.cs" />
+    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionTop.cs" />
     <Compile Include="CollisionCommandsItems\StarBlockCollisionBottom.cs" />
     <Compile Include="CollisionCommandsItems\StarBlockCollisionLeft.cs" />
     <Compile Include="CollisionCommandsItems\StarBlockCollisionRight.cs" />
