Collision response revise

--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -46,17 +46,49 @@
   <ItemGroup>
     <Compile Include="AbstractClasses\MarioRunningStarSprite.cs" />
     <Compile Include="Animation\CoinCollectedFromBlockAnimation.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionTop.cs" />
-    <Compile Include="CollisionCommandsItems\SuperMushroomBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsItems\SuperMushroomBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsItems\SuperMushroomBlockCollisionTop.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionTop.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionBottom.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionLeft.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionRight.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionTop.cs" />
+    <Compile Include="CollisionItems\SuperMushroomBlockCollisionLeft.cs" />
+    <Compile Include="CollisionItems\SuperMushroomBlockCollisionRight.cs" />
+    <Compile Include="CollisionItems\SuperMushroomBlockCollisionTop.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionBottom.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionLeft.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionRight.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionTop.cs" />
     <Compile Include="Commands\MarioBlockCollisionBottom.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
@@ -109,7 +141,6 @@
     <Compile Include="LevelLoader\LevelLoader.cs" />
     <Compile Include="LevelLoader\TileDefinition.cs" />
     <Compile Include="MarioAttributes.cs" />
-    <Compile Include="SizeTransition.cs" />
     <Compile Include="SpriteFactories\BackgroundSpriteFactory.cs" />
     <Compile Include="SpriteFactories\FireballSpriteFactory.cs" />
     <Compile Include="SpriteFactories\ItemSpriteFactory.cs" />
