--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -46,41 +46,73 @@
   <ItemGroup>
     <Compile Include="AbstractClasses\MarioRunningStarSprite.cs" />
     <Compile Include="Animation\CoinCollectedFromBlockAnimation.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaBlockCollisionTop.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionRight.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaGoombaCollisionTop.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionRight.cs" />
-    <Compile Include="CollisionCommandsEnemies\GoombaCollision\GoombaKoopaCollisionTop.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaBlockCollisionTop.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionRight.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaGoombaCollisionTop.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionRight.cs" />
-    <Compile Include="CollisionCommandsEnemies\KoopaCollision\KoopaKoopaCollisionTop.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsItems\StarBlockCollisionTop.cs" />
-    <Compile Include="CollisionCommandsItems\SuperMushroomBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsItems\SuperMushroomBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsItems\SuperMushroomBlockCollisionTop.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionBottom.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionLeft.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionRight.cs" />
-    <Compile Include="CollisionCommandsItems\UpMushroomBlockCollisionTop.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaBlockCollisionBottom.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaBlockCollisionLeft.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaBlockCollisionRight.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaBlockCollisionTop.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaGoombaCollisionRight.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaGoombaCollisionTop.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaKoopaCollisionRight.cs" />
+    <Compile Include="CollisionEnemies\GoombaCollision\GoombaKoopaCollisionTop.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaBlockCollisionBottom.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaBlockCollisionLeft.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaBlockCollisionRight.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaBlockCollisionTop.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaGoombaCollisionRight.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaGoombaCollisionTop.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionRight.cs" />
+    <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionTop.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionBottom.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionLeft.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionRight.cs" />
+    <Compile Include="CollisionItems\StarBlockCollisionTop.cs" />
+    <Compile Include="CollisionItems\SuperMushroomBlockCollisionLeft.cs" />
+    <Compile Include="CollisionItems\SuperMushroomBlockCollisionRight.cs" />
+    <Compile Include="CollisionItems\SuperMushroomBlockCollisionTop.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionBottom.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionLeft.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionRight.cs" />
+    <Compile Include="CollisionItems\UpMushroomBlockCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioCoinCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioFlowerCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioGoombaCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioKoopaCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioRMushroomCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioStarCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionBottom.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionLeft.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionRight.cs" />
+    <Compile Include="CollisionMario\MarioUpMushroomCollisionTop.cs" />
     <Compile Include="Commands\MarioBlockCollisionBottom.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
