--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -70,6 +70,7 @@
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionLeft.cs" />
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionRight.cs" />
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionTop.cs" />
+    <Compile Include="CollisionHandler\CollisionDetector.cs" />
     <Compile Include="CollisionItems\StarBlockCollisionBottom.cs" />
     <Compile Include="CollisionItems\StarBlockCollisionLeft.cs" />
     <Compile Include="CollisionItems\StarBlockCollisionRight.cs" />
@@ -311,7 +312,6 @@
     <None Include="tsconfig1.json" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="CollisionHandler\" />
     <Folder Include="Commands\MarioCollisionCommand\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
