--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -114,7 +114,6 @@
     <Compile Include="CollisionMario\MarioUpMushroomCollisionLeft.cs" />
     <Compile Include="CollisionMario\MarioUpMushroomCollisionRight.cs" />
     <Compile Include="CollisionMario\MarioUpMushroomCollisionTop.cs" />
-    <Compile Include="Commands\MarioBlockCollisionBottom.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
     <Compile Include="GameObjects\BlockGameObjects\BrickBlock.cs" />
@@ -310,9 +309,7 @@
     <None Include="app.manifest" />
     <None Include="tsconfig1.json" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Commands\MarioCollisionCommand\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
