--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionRight.cs" />
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionTop.cs" />
     <Compile Include="CollisionHandler\CollisionDetector.cs" />
+    <Compile Include="CollisionHandler\CollisionHandler.cs" />
     <Compile Include="CollisionItems\StarBlockCollisionBottom.cs" />
     <Compile Include="CollisionItems\StarBlockCollisionLeft.cs" />
     <Compile Include="CollisionItems\StarBlockCollisionRight.cs" />
@@ -114,6 +115,7 @@
     <Compile Include="CollisionMario\MarioUpMushroomCollisionLeft.cs" />
     <Compile Include="CollisionMario\MarioUpMushroomCollisionRight.cs" />
     <Compile Include="CollisionMario\MarioUpMushroomCollisionTop.cs" />
+    <Compile Include="Commands\MarioCommand\BlockStopMarioRunningCommand.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
     <Compile Include="GameObjects\BlockGameObjects\BrickBlock.cs" />
@@ -129,14 +131,14 @@
     <Compile Include="AbstractClasses\MarioState.cs" />
     <Compile Include="AbstractGame.cs" />
     <Compile Include="Camera\Camera.cs" />
-    <Compile Include="Commands\ControllerCommand\RightMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\LeftMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\ReleasedJumpMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\ReleasedRightMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\ReleasedLeftMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\ReleasedCrouchMarioCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\MarioJumpCommand.cs" />
-    <Compile Include="Commands\ControllerCommand\MarioCrouchCommand.cs" />
+    <Compile Include="Commands\MarioCommand\RightMarioCommand.cs" />
+    <Compile Include="Commands\MarioCommand\LeftMarioCommand.cs" />
+    <Compile Include="Commands\MarioCommand\ReleasedJumpMarioCommand.cs" />
+    <Compile Include="Commands\MarioCommand\ReleasedRightMarioCommand.cs" />
+    <Compile Include="Commands\MarioCommand\ReleasedLeftMarioCommand.cs" />
+    <Compile Include="Commands\MarioCommand\ReleasedCrouchMarioCommand.cs" />
+    <Compile Include="Commands\MarioCommand\MarioJumpCommand.cs" />
+    <Compile Include="Commands\MarioCommand\MarioCrouchCommand.cs" />
     <Compile Include="Commands\QuitGameCommand.cs" />
     <Compile Include="Enums\BlockTypes.cs" />
     <Compile Include="Enums\CollisionDirection.cs" />
