--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -127,6 +127,7 @@
     <Compile Include="GameObjects\MarioObject.cs" />
     <Compile Include="Interfaces\IAnimation.cs" />
     <Compile Include="Interfaces\IAnimationInGame.cs" />
+    <Compile Include="Sprites\Background\backgroundSprite.cs" />
     <Compile Include="Sprites\Mario\MarioStarSprite.cs" />
     <Compile Include="AbstractClasses\MarioState.cs" />
     <Compile Include="AbstractGame.cs" />
