--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -83,39 +83,41 @@
     <Compile Include="CollisionItems\UpMushroomBlockCollisionLeft.cs" />
     <Compile Include="CollisionItems\UpMushroomBlockCollisionRight.cs" />
     <Compile Include="CollisionItems\UpMushroomBlockCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioCoinCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioCoinCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioCoinCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioCoinCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioFlowerCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioFlowerCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioFlowerCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioFlowerCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioGoombaCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioGoombaCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioGoombaCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioGoombaCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioKoopaCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioKoopaCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioKoopaCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioKoopaCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioRMushroomCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioRMushroomCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioRMushroomCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioRMushroomCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioStarCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioStarCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioStarCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioStarCollisionTop.cs" />
-    <Compile Include="CollisionMario\MarioUpMushroomCollisionBottom.cs" />
-    <Compile Include="CollisionMario\MarioUpMushroomCollisionLeft.cs" />
-    <Compile Include="CollisionMario\MarioUpMushroomCollisionRight.cs" />
-    <Compile Include="CollisionMario\MarioUpMushroomCollisionTop.cs" />
-    <Compile Include="Commands\MarioCommand\BlockStopMarioRunningCommand.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionCommand\BlockMarioTopCollisionCommand.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionCommand\BlockMarioBottomCommand.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioBlockCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioBlockCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioBlockCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioBlockCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioCoinCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioCoinCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioCoinCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioCoinCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioFlowerCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioFlowerCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioFlowerCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioFlowerCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioGoombaCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioGoombaCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioGoombaCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioGoombaCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioKoopaCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioKoopaCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioKoopaCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioKoopaCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioRMushroomCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioRMushroomCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioRMushroomCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioRMushroomCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioStarCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioStarCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioStarCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioStarCollisionTop.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioUpMushroomCollisionBottom.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioUpMushroomCollisionLeft.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioUpMushroomCollisionRight.cs" />
+    <Compile Include="CollisionMario\OldCommand\MarioUpMushroomCollisionTop.cs" />
+    <Compile Include="CollisionMario\MarioBlockCollisionCommand\BlockStopMarioRunningCommand.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
     <Compile Include="GameObjects\BlockGameObjects\BrickBlock.cs" />
