--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -117,17 +117,30 @@
     <Compile Include="CollisionMario\MarioUpMushroomCollisionTop.cs" />
     <Compile Include="Commands\MarioCommand\BlockStopMarioRunningCommand.cs" />
     <Compile Include="Enums\AnimationState.cs" />
+    <Compile Include="Enums\PipeType.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
     <Compile Include="GameObjects\BlockGameObjects\BrickBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\CoinBrickBlock.cs" />
+    <Compile Include="GameObjects\BlockGameObjects\FloorBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\HiddenBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\QuestionBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\StairBlock.cs" />
     <Compile Include="GameObjects\GameObjectManager.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\Pipe.cs" />
     <Compile Include="GameObjects\MarioObject.cs" />
     <Compile Include="Interfaces\IAnimation.cs" />
     <Compile Include="Interfaces\IAnimationInGame.cs" />
+    <Compile Include="Interfaces\IPipe.cs" />
+    <Compile Include="SpriteFactories\PipeSpriteFactory.cs" />
     <Compile Include="Sprites\Background\backgroundSprite.cs" />
+    <Compile Include="Sprites\Items\BigPipeSprite.cs" />
+    <Compile Include="Sprites\Items\LPipeBottomLeftSprite.cs" />
+    <Compile Include="Sprites\Items\LPipeBottomSprite.cs" />
+    <Compile Include="Sprites\Items\LPipeSprite.cs" />
+    <Compile Include="Sprites\Items\LPipeTopLeftSprite.cs" />
+    <Compile Include="Sprites\Items\LPipeTopSprite.cs" />
+    <Compile Include="Sprites\Items\MediumPipeSprite.cs" />
+    <Compile Include="Sprites\Items\PipeSprite.cs" />
     <Compile Include="Sprites\Mario\MarioStarSprite.cs" />
     <Compile Include="AbstractClasses\MarioState.cs" />
     <Compile Include="AbstractGame.cs" />
