--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -56,17 +56,6 @@
     <Compile Include="CollisionHandler\CollisionHandlerEnemy.cs" />
     <Compile Include="CollisionHandler\CollisionHandlerMario.cs" />
     <Compile Include="CollisionHandler\HandleAllCollison.cs" />
-    <Compile Include="CollisionItems\StarBlockCollisionBottom.cs" />
-    <Compile Include="CollisionItems\StarBlockCollisionLeft.cs" />
-    <Compile Include="CollisionItems\StarBlockCollisionRight.cs" />
-    <Compile Include="CollisionItems\StarBlockCollisionTop.cs" />
-    <Compile Include="CollisionItems\SuperMushroomBlockCollisionLeft.cs" />
-    <Compile Include="CollisionItems\SuperMushroomBlockCollisionRight.cs" />
-    <Compile Include="CollisionItems\SuperMushroomBlockCollisionTop.cs" />
-    <Compile Include="CollisionItems\UpMushroomBlockCollisionBottom.cs" />
-    <Compile Include="CollisionItems\UpMushroomBlockCollisionLeft.cs" />
-    <Compile Include="CollisionItems\UpMushroomBlockCollisionRight.cs" />
-    <Compile Include="CollisionItems\UpMushroomBlockCollisionTop.cs" />
     <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioBlockTop.cs" />
     <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioBlockBottom.cs" />
     <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioEnemyTop.cs" />
@@ -318,7 +307,9 @@
     <None Include="app.manifest" />
     <None Include="tsconfig1.json" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="CollisionItems\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath)\MonoGame\v3.0\MonoGame.Content.Builder.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
