--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -71,6 +71,7 @@
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionRight.cs" />
     <Compile Include="CollisionEnemies\KoopaCollision\KoopaKoopaCollisionTop.cs" />
     <Compile Include="CollisionHandler\CollisionDetector.cs" />
+    <Compile Include="CollisionHandler\CollisionHandlerKoopa.cs" />
     <Compile Include="CollisionHandler\CollisionHandlerGoomba.cs" />
     <Compile Include="CollisionHandler\CollisionHandlerMario.cs" />
     <Compile Include="CollisionHandler\CollisionHandlerSuperMushroom.cs" />
