--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -59,14 +59,14 @@
     <Compile Include="CollisionHandler\HandleAllCollison.cs" />
     <Compile Include="CollisionItems\ItemBlockTop.cs" />
     <Compile Include="CollisionItems\ItemBlockTwoSide.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioBlockTop.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioBlockBottom.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioEnemyTop.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioEnemyTwoSideBottom.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioItemCollision.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioPipeTop.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioPipeTwoSide.cs" />
-    <Compile Include="CollisionMario\MarioBlockCollisionCommand\MarioBlockTwoSide.cs" />
+    <Compile Include="CollisionMario\MarioBlockTop.cs" />
+    <Compile Include="CollisionMario\MarioBlockBottom.cs" />
+    <Compile Include="CollisionMario\MarioEnemyTop.cs" />
+    <Compile Include="CollisionMario\MarioEnemyTwoSideBottom.cs" />
+    <Compile Include="CollisionMario\MarioItemCollision.cs" />
+    <Compile Include="CollisionMario\MarioPipeTop.cs" />
+    <Compile Include="CollisionMario\MarioPipeTwoSide.cs" />
+    <Compile Include="CollisionMario\MarioBlockTwoSide.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Enums\PipeType.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
