--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -59,6 +59,8 @@
     <Compile Include="CollisionHandler\HandleAllCollison.cs" />
     <Compile Include="CollisionItems\ItemBlockTop.cs" />
     <Compile Include="CollisionItems\ItemBlockTwoSide.cs" />
+    <Compile Include="CollisionItems\ItemPipeTop.cs" />
+    <Compile Include="CollisionItems\ItemPipeTwoSides.cs" />
     <Compile Include="CollisionMario\MarioBlockTop.cs" />
     <Compile Include="CollisionMario\MarioBlockBottom.cs" />
     <Compile Include="CollisionMario\MarioEnemyTop.cs" />
