--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -69,6 +69,7 @@
     <Compile Include="CollisionMario\MarioPipeTop.cs" />
     <Compile Include="CollisionMario\MarioPipeTwoSide.cs" />
     <Compile Include="CollisionMario\MarioBlockTwoSide.cs" />
+    <Compile Include="Display\TitleDisplayPanel.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Enums\PipeType.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
@@ -88,13 +89,19 @@
     <Compile Include="GameObjects\PipeGameObjects\MediumPipe.cs" />
     <Compile Include="GameObjects\PipeGameObjects\Pipe.cs" />
     <Compile Include="GameObjects\MarioObject.cs" />
+    <Compile Include="Heads_Up\ScoringSystem.cs" />
+    <Compile Include="Interfaces\GameState.cs" />
+    <Compile Include="Interfaces\IDisplayPanel.cs" />
     <Compile Include="Interfaces\IAnimation.cs" />
     <Compile Include="Interfaces\IAnimationInGame.cs" />
     <Compile Include="Interfaces\ICollisionHandler.cs" />
     <Compile Include="Interfaces\IPipe.cs" />
+    <Compile Include="Interfaces\IText.cs" />
     <Compile Include="Sound\SoundManager.cs" />
     <Compile Include="SpriteFactories\PipeSpriteFactory.cs" />
+    <Compile Include="SpriteFactories\TextSpriteFactory.cs" />
     <Compile Include="Sprites\Background\backgroundSprite.cs" />
+    <Compile Include="Sprites\Background\TileImg.cs" />
     <Compile Include="Sprites\Items\BigPipeSprite.cs" />
     <Compile Include="Sprites\Items\LPipeBottomLeftSprite.cs" />
     <Compile Include="Sprites\Items\LPipeBottomSprite.cs" />
@@ -218,6 +225,7 @@
     <Compile Include="Sprites\Mario\RunningRightBigMarioSprite.cs" />
     <Compile Include="Sprites\Mario\RunningRightFireMarioSprite.cs" />
     <Compile Include="Sprites\Mario\RunningRightSmallMarioSprite.cs" />
+    <Compile Include="Sprites\Text.cs" />
     <Compile Include="StateMachine\BrickBlockStateMachine.cs" />
     <Compile Include="StateMachine\CoinBrickBlockStateMachine.cs" />
     <Compile Include="StateMachine\HiddenBlockStateMachine.cs" />
@@ -227,6 +235,12 @@
     <Compile Include="States\EnemyStates\KoopaAliveRightState.cs" />
     <Compile Include="States\EnemyStates\KoopaAliveState.cs" />
     <Compile Include="States\EnemyStates\KoopaDeadState.cs" />
+    <Compile Include="States\GameStates\GameOver.cs" />
+    <Compile Include="States\GameStates\LevelComplete.cs" />
+    <Compile Include="States\GameStates\LifeDisplay.cs" />
+    <Compile Include="States\GameStates\Pause.cs" />
+    <Compile Include="States\GameStates\Playing.cs" />
+    <Compile Include="States\GameStates\Title.cs" />
     <Compile Include="States\MarioState\CrouchLeftBigMarioState.cs" />
     <Compile Include="States\MarioState\CrouchLeftFireMarioState.cs" />
     <Compile Include="States\MarioState\CrouchLeftStarMarioState.cs" />
