--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -69,6 +69,10 @@
     <Compile Include="CollisionMario\MarioPipeTop.cs" />
     <Compile Include="CollisionMario\MarioPipeTwoSide.cs" />
     <Compile Include="CollisionMario\MarioBlockTwoSide.cs" />
+    <Compile Include="Commands\MarioCommand\ChangeBigState.cs" />
+    <Compile Include="Commands\MarioCommand\ChangeDeadState.cs" />
+    <Compile Include="Commands\MarioCommand\ChangeFireState.cs" />
+    <Compile Include="Commands\MarioCommand\ChangeSmallState.cs" />
     <Compile Include="Display\TitleDisplayPanel.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Enums\PipeType.cs" />
