--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -73,6 +73,7 @@
     <Compile Include="Commands\MarioCommand\ChangeDeadState.cs" />
     <Compile Include="Commands\MarioCommand\ChangeFireState.cs" />
     <Compile Include="Commands\MarioCommand\ChangeSmallState.cs" />
+    <Compile Include="Commands\PauseCommand.cs" />
     <Compile Include="Display\GameOverDisplayPanel.cs" />
     <Compile Include="Display\HeadsUpDisplayPanel.cs" />
     <Compile Include="Display\MarioLifeDisplayPanel.cs" />
