--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -81,7 +81,15 @@
     <Compile Include="Enums\BackgourndObjType.cs" />
     <Compile Include="Enums\PipeType.cs" />
     <Compile Include="Game Controllers\InputState.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\BigBush.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\BigCloud.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\BigHill.cs" />
     <Compile Include="GameObjects\BackGourndObjects\Castle.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\MediumBush.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\MediumCloud.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\SmallBush.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\SmallCloud.cs" />
+    <Compile Include="GameObjects\BackGourndObjects\SmallHill.cs" />
     <Compile Include="GameObjects\BlockGameObjects\BrickBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\CoinBrickBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\FloorBlock.cs" />
@@ -110,8 +118,15 @@
     <Compile Include="Sound\SoundManager.cs" />
     <Compile Include="SpriteFactories\PipeSpriteFactory.cs" />
     <Compile Include="SpriteFactories\TextSpriteFactory.cs" />
-    <Compile Include="Sprites\Background\backgroundSprite.cs" />
+    <Compile Include="Sprites\Background\BigBushSprite.cs" />
+    <Compile Include="Sprites\Background\BigCloudSprite.cs" />
+    <Compile Include="Sprites\Background\BigHillSprite.cs" />
     <Compile Include="Sprites\Background\CastleSprite.cs" />
+    <Compile Include="Sprites\Background\MediumBushSprite.cs" />
+    <Compile Include="Sprites\Background\MediumCloudSprite.cs" />
+    <Compile Include="Sprites\Background\SmallBushSprite.cs" />
+    <Compile Include="Sprites\Background\SmallCLoudSprite.cs" />
+    <Compile Include="Sprites\Background\SmallHill.cs" />
     <Compile Include="Sprites\Background\TileImg.cs" />
     <Compile Include="Sprites\Items\BigPipeSprite.cs" />
     <Compile Include="Sprites\Items\LPipeBottomLeftSprite.cs" />
