--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="AbstractClasses\MarioRunningStarSprite.cs" />
     <Compile Include="Animation\CoinCollectedFromBlockAnimation.cs" />
+    <Compile Include="Animation\ScoreTextAnimation.cs" />
     <Compile Include="Camera\Camera2D.cs" />
     <Compile Include="CollisionEnemies\EnemyBlockTop.cs" />
     <Compile Include="CollisionEnemies\EnemyBlockTwoSide.cs" />
