--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -98,6 +98,9 @@
     <Compile Include="GameObjects\BlockGameObjects\QuestionBlock.cs" />
     <Compile Include="GameObjects\BlockGameObjects\StairBlock.cs" />
     <Compile Include="GameObjects\GameObjectManager.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\Flag.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\FlagPole.cs" />
+    <Compile Include="GameObjects\ItemGameObjects\FlagTop.cs" />
     <Compile Include="GameObjects\PipeGameObjects\BigPipe.cs" />
     <Compile Include="GameObjects\PipeGameObjects\LPipe.cs" />
     <Compile Include="GameObjects\PipeGameObjects\LPipeBottom.cs" />
@@ -130,6 +133,9 @@
     <Compile Include="Sprites\Background\SmallHill.cs" />
     <Compile Include="Sprites\Background\TileImg.cs" />
     <Compile Include="Sprites\Items\BigPipeSprite.cs" />
+    <Compile Include="Sprites\Items\FlagPoleSprite.cs" />
+    <Compile Include="Sprites\Items\FlagSprite.cs" />
+    <Compile Include="Sprites\Items\FlagTopSprite.cs" />
     <Compile Include="Sprites\Items\LPipeBottomLeftSprite.cs" />
     <Compile Include="Sprites\Items\LPipeBottomSprite.cs" />
     <Compile Include="Sprites\Items\LPipeSprite.cs" />
