--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -152,7 +152,7 @@
     <Compile Include="Sprites\Items\PiranhaPlantsSprite.cs" />
     <Compile Include="Sprites\Mario\MarioStarSprite.cs" />
     <Compile Include="AbstractClasses\MarioState.cs" />
-    <Compile Include="AbstractGame.cs" />
+    <Compile Include="AbstractClasses\AbstractGame.cs" />
     <Compile Include="Camera\Camera.cs" />
     <Compile Include="Commands\MarioCommand\RightMarioCommand.cs" />
     <Compile Include="Commands\MarioCommand\LeftMarioCommand.cs" />
@@ -190,7 +190,7 @@
     <Compile Include="Interfaces\ISprite.cs" />
     <Compile Include="LevelLoader\LevelLoader.cs" />
     <Compile Include="LevelLoader\TileDefinition.cs" />
-    <Compile Include="MarioAttributes.cs" />
+    <Compile Include="GameObjects\MarioAttributes.cs" />
     <Compile Include="SpriteFactories\BackgroundSpriteFactory.cs" />
     <Compile Include="SpriteFactories\FireballSpriteFactory.cs" />
     <Compile Include="SpriteFactories\ItemSpriteFactory.cs" />
