--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -82,6 +82,7 @@
     <Compile Include="Display\HeadsUpDisplayPanel.cs" />
     <Compile Include="Display\MarioLifeDisplayPanel.cs" />
     <Compile Include="Display\TitleDisplayPanel.cs" />
+    <Compile Include="Display\WinningDisplayPanel.cs" />
     <Compile Include="Enums\AnimationState.cs" />
     <Compile Include="Enums\BackgourndObjType.cs" />
     <Compile Include="Enums\PipeType.cs" />
