--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -45,9 +45,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="AbstractClasses\MarioRunningStarSprite.cs" />
-    <Compile Include="Animation\CoinCollectedFromBlockAnimation.cs" />
-    <Compile Include="Animation\PoleScoreTextAnimation.cs" />
-    <Compile Include="Animation\ScoreTextAnimation.cs" />
+    <Compile Include="Animation\CoinOutOfBlockAnimation.cs" />
+    <Compile Include="Animation\PoleScoreAnimation.cs" />
+    <Compile Include="Animation\ScoreAnimation.cs" />
     <Compile Include="Animation\VictoryAnimation.cs" />
     <Compile Include="Camera\Camera2D.cs" />
     <Compile Include="CollisionEnemies\EnemyBlockTop.cs" />
