--- a/Game/FlugelMario/FlugelMario.csproj
+++ b/Game/FlugelMario/FlugelMario.csproj
@@ -116,8 +116,8 @@
     <Compile Include="GameObjects\PipeGameObjects\MediumPipe.cs" />
     <Compile Include="GameObjects\PipeGameObjects\Pipe.cs" />
     <Compile Include="GameObjects\MarioObject.cs" />
-    <Compile Include="Heads_Up\CoinSystem.cs" />
-    <Compile Include="Heads_Up\ScoringSystem.cs" />
+    <Compile Include="SCsytem\CoinSystem.cs" />
+    <Compile Include="SCsytem\ScoringSystem.cs" />
     <Compile Include="Interfaces\IDisplayPanel.cs" />
     <Compile Include="Interfaces\IAnimation.cs" />
     <Compile Include="Interfaces\IAnimationInGame.cs" />
